test(best-practices): downloaded W3C image for use in some tests

--- a/packages/best-practices/test/fixtures/testcases/BP13/test1.html
+++ b/packages/best-practices/test/fixtures/testcases/BP13/test1.html
@@ -7,6 +7,10 @@
 </head>
   
 <body> 
+  <!--
+    Use of the image w3c-no-bars.gif (as logo_w3s.gif) is assumed to be
+    permitted, see https://www.w3.org/policies/logos/
+  -->
 <a href="https://www.w3schools.com"><img border="0" alt="W3Schools" src="logo_w3s.gif" width="100" height="100"></a><a href="https://www.w3schools.com"></a>
 </body> 
   
